# ALSE_2220

INTERFAZ/VentanaProjecto/: CMakeLists.txt  consol_usuar.cpp  consol_usuar.h  consol_usuar.ui  main.cpp  mainwindow.cpp  mainwindow.ui
INTERFAZ/build-VentanaProjecto-Desktop-Debug/: CMakeCache.txt  Makefile  VentanaProjecto  VentanaProjecto.cbp  cmake_install.cmake
INTERFAZ/build-VentanaProjecto-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-fcc649983a7461a5ed63.json  cmakeFiles-v1-1734c08c7b12ff067eed.json  codemodel-v2-b0efa87baf5dcc506e07.json  index-2022-12-09T18-17-02-0420.json  target-VentanaProjecto-Debug-50968ea0ac980a965445.json  target-VentanaProjecto_autogen-Debug-f9cf45ad4e0065836e48.json
INTERFAZ/build-VentanaProjecto-Desktop-Debug/VentanaProjecto_autogen/: mocs_compilation.cpp
INTERFAZ/build-VentanaProjecto-Desktop-Debug/VentanaProjecto_autogen/EWIEGA46WW/: moc_consol_usuar.cpp
INTERFAZ/build-VentanaProjecto-Desktop-Debug/VentanaProjecto_autogen/include/: ui_consol_usuar.h  ui_mainwindow.h
airQ/build-src-Desktop-Debug/: AirQ  AirQuality.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
airQ/build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9fd3b595deb09d9ccfd1.json  cmakeFiles-v1-eabcefa93efe34a92f07.json  codemodel-v2-920644c7ad348d2b6fe1.json  index-2022-12-09T14-56-56-0389.json  target-AirQ-Debug-bf59c13dd968097dc9d8.json
airQ/src/: CMakeLists.txt  direccion.h  humedad.h  luz.h  main.cpp  precipitacion.h  sensor.h  temperatura.h  velocidad.h
