
project( AirQuality )
add_executable( AirQ
                sensor.h
                sensor.cpp
                nitro.h
                carbon.h
                temp.h
                temperatura.h
                humedad.h
                velocidad.h
                direccion.h
                precipitacion.h
                luz.h
                main.cpp)
